2007-04-16  Junichi Uekawa  <dancer@debian.org>

	* examples/B92test-pkg: change comment to clarify.

	* pdebuild.1: documentation update: note --debbuildopts and
	--debootstrapopts have different ways of specifying multiple
	options. This probably needs really fixing, but that will happen sometime later.

	* pbuilder.8: ditto.

2007-04-11  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS, etc: remove $Id$, which is CVS specific

2007-04-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation

	* pbuilder-modules: say lenny instead of sarge

	* pbuilder.8: lenny is supported architecture, not sarge

	* pbuilderrc: make lenny default

	* testsuite/run-test.sh: add lenny

2007-04-03  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install pbuilder-satisfydepends-funcs,
	pbuilder-satisfydepends-checkparams

2007-04-02  Loic Minier <lool@dooz.org>
	* pbuilder-satisfydepends-aptitude: check whether the dummy
	dependencies package was truly installed or error out; catches
	situation where "aptitude" did not keep the dummy package but claimed
	the installation was successful.

2007-04-01  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1, etc.: 409135: SEE ALSO fix.

2007-04-01  Loic Minier <lool@dooz.org>

	* pbuilder-satisfydepends*:
	- Modularize with new -funcs and -checkparams shared sources.
	- New pbuilder-satisfydepends-aptitude resolver based on aptitude.
	- Cleanups.

2007-03-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: spacing fix.

	* pbuilder-modules: re-refix. 391915
	"The fix for #391915 as applied in 0.165 isn't quite correct,
	it still has an unconditional rm -f "$BUILDPLACE/etc/$a" outside
	the check for an existing /etc/$a to copy into its place."
	From Paul TBBle Hampson <Paul.Hampson@Pobox.com>

2007-03-30  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux : '-n "${PBUILDER_COW}"' is not a good