@@ -1,3 +1,8 @@
+2007-04-17  Junichi Uekawa  <dancer@debian.org>
+
+	* testsuite/run-test.sh (HOOKOPTION): change upgrade testing
+	procedure
+
 2007-04-16  Junichi Uekawa  <dancer@debian.org>
 
 	* examples/B92test-pkg: change comment to clarify.
